Code review comment for Long.valueOf(0)
Signed-off-by: TimBishop <tabishop@us.ibm.com>